@@ -70,10 +70,11 @@ namespace DangIt_FAR
         }
 
 
-        protected override void DI_FailBegin()
+        protected override bool DI_FailBegin()
         {
-            return;
+            return true;
         }
+
 
         protected override void DI_Disable()
         {
