@@ -39,9 +39,9 @@ namespace ippo
         }
 
 
-        protected override void DI_FailBegin()
+        protected override bool DI_FailBegin()
         {
-            return;
+            return true;
         }
 
 
