@@ -2,6 +2,8 @@
 
 The temperature's effect on aging is now independent from the use of the part.
 The TemperatureMultiplier is now included in the computation of Lambda.
+Fixes the bug where the spares container does not check the eva distance in the settings.
+Changed the default max distance to 2m
 
 
 
